crates/pg_syntax/tests/snapshots/postgres_regress/float4@83.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT float4send('750486563e-38'::float4);"
---
SelectStmt@0..43
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..41
    FuncCall@7..41
      Ident@7..17 "float4send"
      Ascii40@17..18 "("
      TypeCast@18..41
        AConst@18..33
          Sconst@18..33 "'750486563e-38'"
        Typecast@33..35 "::"
        TypeName@35..41
          Ident@35..41 "float4"
  Ascii41@41..42 ")"
  Ascii59@42..43 ";"

