crates/pg_syntax/tests/snapshots/postgres_regress/float4@92.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create cast (xfloat4 as integer) without function;
---
CreateCastStmt@0..50
  Create@0..6 "create"
  Whitespace@6..7 " "
  Cast@7..11 "cast"
  Whitespace@11..12 " "
  Ascii40@12..13 "("
  TypeName@13..20
    Ident@13..20 "xfloat4"
  Whitespace@20..21 " "
  As@21..23 "as"
  Whitespace@23..24 " "
  TypeName@24..31
    Integer@24..31 "integer"
  Ascii41@31..32 ")"
  Whitespace@32..33 " "
  Without@33..40 "without"
  Whitespace@40..41 " "
  Function@41..49 "function"
  Ascii59@49..50 ";"

